ข้อความอธิบายการเปลี่ยนแปลง

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="col-sm-4">
       <div class="block text-center">
         <img src="tank.jpg" alt="Cylinder tank" height="150">
-        <p>Cylinder tank <br><a href="https://pixabay.com">Source: Pixabay</a></p>
+        <p>Cylinder tank <br><a href="https://pixabay.com/photos/factory-storage-tank-chemistry-644982/">Source: Pixabay</a></p>
       </div>
     </div>
 
